--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hey there</h1>
-<p>This is just a placeholder rn, nothing much</p>
-</body>
+<p>This is just a placeholder rn, nothing much yeet </p>
+</body> <!--wait lets see how long it takes to apply-->
 </html>
