--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <body>
 <h1>Hey there</h1>
 <p>This is just a placeholder rn, nothing much yeet </p>
-</body> <!--wait lets see how long it takes to apply-->
+</body> <!--wait it updated now-->
 </html>
