Discord link added
yea title says it all

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 <body>
 <h1>Hey there</h1>
-<p>This is just a placeholder rn, nothing much yeet </p>
-</body> <!--wait it updated now-->
+<p>This is just a placeholder rn</p>
+<br>
+<br>
+<p>My Discord Bot</p>
+<button onclick="window.location.href='https://flaxeneel2.github.io/AIO/Invite'">Click here to invite my bot to your server!</button>
+<br>
+<br>
+<p>My Discord bot's server</p>
+<button onclick="window.location.href='https://flaxeneel2.github.io/AIO/Discord'">Click me</button>
+</body> 
+<!--sent it -->
+<!--ok send in disc-->
 </html>
